1.5/svc_back.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-back
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      name: multitool
      port: 80
