1.5/svc_front.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-front
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      name: nginx
      port: 80
